# autorl-loop

./: .gitignore  LICENSE  README.md  pyproject.toml
autorl/: __init__.py  cli.py
autorl/backends/: __init__.py  base.py  cloudml.py  local.py  slurm.py
autorl/core/: experiment.py  runner.py  tracker.py
autorl/parsers/: base.py  verl.py
autorl/search/: base.py  llm.py  perturbation.py
examples/minimal/: autorl_config.yaml  train_template.sh
examples/verl_cloudml/: autorl_config.yaml
